# MTD-App

./: .gitignore  .gitmodules  Cargo.toml  NOTICE.md  README.md  THIRD_PARTY_NOTICES.md  build.rs
.github/workflows/: release.yml
assets/fonts/: README.md
scripts/: build-ffmpeg-windows.ps1  build-ffmpeg.sh  build-linux.sh  build-macos.sh  build-windows.ps1
src/: api.rs  app.rs  app_data.rs  app_settings.rs  config.rs  embedded_assets.rs  fonts.rs  job.rs  main.rs  media.rs  media_types.rs  models.rs  native_menu.rs  pipeline.rs  platform.rs  project.rs  secret_store.rs  subtitles.rs  theme.rs  ui.rs  video_preview.rs
