[package]
name = "mtd-subtitle-app"
version = "0.1.0"
edition = "2024"
description = "Cross-platform desktop app for creating video subtitles with MOSS-Transcribe-Diarize"

[dependencies]
anyhow = "1.0"
eframe = "0.33"
egui = "0.33"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rfd = "0.15"
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", default-features = false, features = ["std", "NSApplication", "NSEvent", "NSMenu", "NSMenuItem", "NSResponder"] }
objc2-foundation = { version = "0.2.2", default-features = false, features = ["std", "NSDictionary", "NSAttributedString", "NSThread", "NSString"] }
winit = "0.30.13"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
